--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@
     text-align: center;
     font-size: 36px;
     margin-top: 20px;
+    border-bottom: 2px solid #4bbe70;
     color: #4bbe70;
   }
   
